# pip-outdated

./: .gitignore  README.md  pyproject.toml
pip_outdated/: __init__.py  check_outdated.py  find_require.py  find_requirements.py  print_outdated.py  session.py  verbose.py
